src/components/Sidebar.scss
.sidebar {
  padding: 2rem;
  grid-area: sidebar;
  background-color: #eee;

  h2 {
    font-size: 2.2rem;
    margin-bottom: 2rem;
  }

  .label {
    margin-bottom: 1rem;
    display: grid;
  }

  .btn {
    margin-top: 2rem;
    width: 100%;
  }
}

